# slam-bot

./: .gitignore  PI_DEPLOYMENT.md  PI_PACKAGE_NOTES.md  QUICK_START_PI.md  README.md  deploy_to_pi.sh  docker-compose.pi.yml  docker-compose.yml  setup.sh  setup_on_pi.sh  simple_setup_pi.sh
.github/workflows/: docker.yml
config/: motor_params.yaml
docker/: Dockerfile  Dockerfile.gui  Dockerfile.gui.pi  Dockerfile.pi  docker-compose.yml  fastdds.xml  realsense.Dockerfile  rs_params.yaml  teleop.yaml
src/: CMakeLists.txt  package.xml  roboclaw_base_node.py  snapshot_recorder.py
src/slam_bot_bringup/: CMakeLists.txt  package.xml
src/slam_bot_bringup/config/: robot.rviz
src/slam_bot_bringup/launch/: robot.launch.py
src/slam_bot_control/: CMakeLists.txt  package.xml
src/slam_bot_control/scripts/: motor_controller.py
src/slam_bot_control/slam_bot_control/: __init__.py  roboclaw.py
src/slam_bot_description/: CMakeLists.txt  package.xml
src/slam_bot_description/urdf/: slam_bot.urdf.xacro
src/slam_bot_navigation/: CMakeLists.txt  package.xml
src/slam_bot_navigation/launch/: navigation.launch.py  slam.launch.py
src/tests/: rc_encoders_check.py  test_motors.py
